# kanso-ai

./: .gitignore  App.tsx  OPIK_INTEGRATION.md  README.md  index.html  package.json  types.ts
backend/: .env.example  README.md  optimize_prompts.py  pyproject.toml  run.py  run_evaluation.py  setup_online_rules.py
backend/app/: __init__.py  calendar_export.py  config.py  evaluation.py  logging_config.py  main.py  middleware.py  models.py  opik_service.py
backend/app/agents/: __init__.py  analyst.py  architect.py  estimator.py  manager.py  orchestrator.py  output_schemas.py  research.py  reviewer.py  scheduler.py  tools.py
components/: AgentStatusDisplay.tsx  GanttChart.tsx  ProjectDetails.tsx
frontend/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts
frontend/components/: AgentStatusDisplay.tsx  GanttChart.tsx  ImpactBackground.tsx  ProjectDetails.tsx
frontend/services/: apiService.ts
services/: geminiService.ts
